--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,16 @@
         android:theme="@style/Theme.Test"
         tools:targetApi="31">
         <activity
-            android:name=".ui.LoginActivity"
-            android:exported="false">
-        </activity>
+            android:name=".ui.activities.PrincipalActivity"
+            android:exported="false" />
         <activity
-            android:name=".ui.MainActivity"
-            android:exported="false">
-        </activity>
+            android:name=".ui.activities.LoginActivity"
+            android:exported="false" />
         <activity
-            android:name=".ui.LoginActivity2"
+            android:name=".ui.activities.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activities.LoginActivity2"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
